<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activity.DetailTeamActivity">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            app:elevation="0dp"
            app:toolbarId="@+id/toolbar"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:titleEnabled="false"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary">

            <ImageView
                    android:id="@+id/detail_team_stadium_thumb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:contentDescription="@string/content_description_stadium_team_photo"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax"
                    android:fitsSystemWindows="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                <ImageView
                        android:id="@+id/detail_team_badge"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:layout_centerInParent="true"
                        tools:src="@drawable/ic_soccer_ball"
                        android:layout_marginBottom="50dp"/>

                <TextView
                        android:id="@+id/detail_team_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="32sp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:textColor="@android:color/white"
                        tools:text="Arsenal"/>

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bg_tab_layout"/>

        <LinearLayout
                android:id="@+id/layout_anim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/loading_animation_top_margin"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                android:orientation="vertical">

            <ImageView android:id="@+id/loading_anim_view"
                       android:contentDescription="@string/animation_loading"
                       android:layout_width="50dp"
                       android:layout_height="50dp"
                       android:background="@drawable/ic_soccer_ball"/>


        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentPadding="5dp"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="2dp">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:orientation="horizontal">

                            <TextView android:layout_width="0dp"
                                      android:layout_height="wrap_content"
                                      android:layout_weight="1"
                                      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                      android:text="@string/text_detail_team_stadium"/>

                            <TextView
                                    android:id="@+id/detail_team_stadium"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="Jalak Karupat"/>

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:orientation="horizontal">

                            <TextView android:layout_width="0dp"
                                      android:layout_height="wrap_content"
                                      android:layout_weight="1"
                                      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                      android:text="@string/text_detail_team_stadium_capacity"/>

                            <TextView
                                    android:id="@+id/detail_team_stadium_capacity"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="20"/>

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:orientation="horizontal">

                            <TextView android:layout_width="0dp"
                                      android:layout_height="wrap_content"
                                      android:layout_weight="1"
                                      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                      android:text="@string/text_detail_team_website"/>

                            <TextView
                                    android:id="@+id/detail_team_website"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="https://www.arsenal.com"
                                    android:singleLine="true"
                                    android:lines="1"/>

                        </LinearLayout>

                        <TextView
                                android:id="@+id/detail_desc_name_team"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/activity_vertical_margin"
                                android:layout_gravity="start"
                                tools:text="Arsenal"
                                android:textAllCaps="true"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@android:color/black"/>

                        <TextView
                                android:id="@+id/detail_team_desc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/activity_vertical_margin"
                                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>